# AutoStockPython

./: .gitignore  .pdm-python  README.md  base.py  pyproject.toml
src/AutoStockPython.egg-info/: PKG-INFO
src/autostockpython/: BaseTrading.py  CommonStockModule.py  __init__.py
src/autostockpython/backend/: backend_fast.py
src/autostockpython/custom/: MyFirstDataProvider.py
src/autostockpython/custom/KISDataProvider/: KISDataProvider.py  KISModule.py  KISRealtime.py  KISWebSocketClient.py  backend_fast.py
src/autostockpython/custom/KISDataProvider/test/: backend_fasttest.py
src/autostockpython/custom/PyKISDataProvider/: PyKISDataProvider.py
src/autostockpython/custom/YFDataProvider/: YFDataProvider.py
src/autostockpython/custom/strategy/: StrategyBuyAndHold.py
src/autostockpython/frontend/: front_stream.py
src/autostockpython/module/: DataProvider.py  Strategy.py  Trader.py
tests/DataProviderTests/: SimulateDataProviderTest.py
tests/StrategyTests/: test_strategyBuyAndHold.py
tests/TraderTests/: test_KISTrader.py
tests/VirtualMarketTests/: test_KISVitrualMarket.py
