[project]
name = "AutoStockPython"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kim", email = "lsiwh32749@gmail.com"},
]
dependencies = [
    "jupyter>=1.1.1",
    "note>=0.5.2",
    "pycryptodome>=3.21.0",
    "websockets>=14.2",
    "pytest>=8.3.4",
    "pykis>=0.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
